<resources>
    <string name="app_name">"Learn Tai Language "</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>



    <string name="title_a1">    ၵ- ဝႃႈ ၵႆႇ ၵွပ်ႈတႆႇမႆႉၼိူဝ်ၵွၼ်း </string>
    <string name="title_a2"> 	ၶ- ဝႃႈ ၶႆႇ မႄႈမၼ်း ပႆႇမႃးငွမ်း </string>
    <string name="title_a3"> 	င- ဝႃႈ ငူး လိူၼ်ႈမႃးၸူး တူဝ်ၶဵတ်ႇ</string>
    <string name="title_a4"> 	ၸ- ဝႃႈ ၸၢင်ႉ ပႆဢူင်ႉဢၢင်ႉၸွမ်းတၢင်း</string>
    <string name="title_a5"> 	သ- ဝႃႈ သိူဝ် မီးယူႇၼိူဝ်လႃႇႁႃႉ</string>
    <string name="title_a6"> 	ၺ- ဝႃႈ ၺွင်ႇ မီးၽၢႆႇႁွင်ႇၵွင်းမူး</string>
    <string name="title_a7"> 	တ- ဝႃႈ တဝ်ႇ တီႈယူႇၵဝ်ႇႁိမ်းၼွင်</string>
    <string name="title_a8"> 	ထ - ဝႃႈ ထႆ တမ်းယႆဝႆႉ သၢမ်မၢၵ်ႈ</string>
    <string name="title_a9"> 	ၼ - ဝႃႈ ၼူ မေႃးၸူၸူၸွမ်းၸွၵ်ႉ</string>
    <string name="title_a10"> 	ပ - ဝႃႈ ပႃ ဢႅဝ်ႇလုၺ်းႁႃၵိၼ်ယိူဝ်ႇ</string>
    <string name="title_a11"> 	ၽ -ဝႃႈ ၽိုင်ႈ ၽွမ်ႉလုပ်ႇယိုင်ႈႁဵတ်းႁူင်း</string>
    <string name="title_a12"> 	ၾ - ဝႃႈ ၾႃႉ ၼႆႉပဵၼ်ၾႃႉၵၢင်ႁၢဝ်</string>
    <string name="title_a13"> 	မ - ဝႃႈ မႄႈ သွၼ်ယဵၼ်ႇငႄႈလုၵ်ႈလၢင်း</string>
    <string name="title_a14"> 	ယ - ဝႃႈ ယုင်း ၵင်ႈသုတ်းမုင်းၸင်ႇလွတ်ႈ</string>
    <string name="title_a15"> 	ရ - ဝႃႈ ရႁၢၼ်း တီႈလူႇတၢၼ်းၵွမ်းဝႆႈ</string>
    <string name="title_a16"> 	လ- ဝႃႈ လေႃႉ ႁေႃႈၵႂႃႇတေႃႉၶူဝ်းသူၼ်</string>
    <string name="title_a17"> 	ဝ - ဝႃႈ ဝူဝ်း တူဝ်တေႃႉၶူဝ်းၵႂႃႇၵၢတ်ႇ</string>
    <string name="title_a18"> 	ႁ - ဝႃႈ ႁိူဝ်း ၽႆၢးလတ်းမိူဝ်းၶၢမ်ႈတႃႈ</string>
    <string name="title_a19"> 	ဢ- ဝႃႈ ဢွႆႈ ၸဵမ်းၸွႆႈၸွႆႈၵိၼ်ဝၢၼ်။</string>


    <string name="title_b1">
        တူဝ် (ဝ) ၼႆႉ ပေႃးၵႂႃႇသွၼ်ႉပိူၼ်ႈ မၢင်တီႈ ပဵၼ် -ႂ (ၵႂၢႆႉတႂ်ႈ)ယူႇ၊ တေလႆႈ ပွင်ႇၸႂ်ဝႃႈ သင်တူဝ် (ဝ) ႁွမ်းၸွမ်း မႄႈၵပ်းငဝ်ႈ သရ-ၸိုင် တေပဵၼ် -ႂ (ၵႂၢႆႉတႂ်ႈ)၊ ပေႃးႁွမ်းၸွမ်း တူဝ်မႄႈလိၵ်ႈ တေပဵၼ် (ဝ) ၵႂႃႇ။
    </string>
    <string name="title_b2">
        တီႈတႅၵ်ႈမၼ်း-
    </string>
    <string name="title_b3">
            - ၽဵင်းၵႂၢမ်း၊ ၶႂၢင်ႉပၼ်၊ ၵႂႃႇၵၢၼ် (တူဝ် ဝ-သွၼ်ႉၸွမ်း မႄႈၵပ်းငဝ်ႈ  ဢႃပွတ်း)
    </string>
    <string name="title_b4">
            - ၵွင်းလင်၊ ႁွႆးတိၼ်၊ ပၢင်ပွႆး(တူဝ် "ဝ" လၢႆꧦၵူၺ်း၊ ဢမ်ႇႁွမ်းပႃး သရ)။
    </string>
    <string name="title_b5">
        ၼႂ်းလိၵ်ႈတႆးၵဝ်ႇ မီးပိူင် "ၵႂၢႆႉတႂ်ႈ ၵႂၢႆႉၼိူဝ် ( -ႂ် )၊ ပၢၼ်မႂ်ႇမိူဝ်ႈလဵဝ် ဢွၵ်ႇသဵင်ဝႃႈ "ၵၢင်းၵိင်း"၊ မၢင်တီႈဝႃႈ “ၽႅတ်းတႂ်ႈ ၽႅတ်းၼိူဝ်”၊ တီႈၼႆႈ ပွင်ႇၸႂ်ဝႃႈ တူဝ် ဝ-ၼၼ်ႉ ၵႂႃႇပဵၼ် ၵႂၢႆႉတႂ်ႈ၊ လွင်ႈၼႆႉ မီးလွင်ႈငမ်းငဝ်းဝႆႉလေႈ လီလဵပ်ႈႁဵၼ်းထႅင်ႈယူႇ။
    </string>
    <string name="title_b6">	လိူဝ်သေ 8-တူဝ်ၼႆႉ သင်ဢဝ် ရ်-ၽ်-သ်-ၶ် (ၽႅတ်း)ဝႆႉၸိုင် ၶေႃႈၵႂၢမ်း ၸိူဝ်းၼၼ်ႉ လုၵ်ႉတီႈပႃႇလိလုသေ ပဵၼ်မႃးၵႂၢမ်းတႆး၊ ပေႃးတႅမ်ႈၸွမ်းပိူင် လိၵ်ႈတႆးၼႆ
        လိူဝ်သေ 8-တူဝ်ၼႆႉ ဢမ်ႇမီးတူဝ်ၽႅတ်းထႅင်ႈ၊ ၼႂ်းၵႂၢမ်းၸႂ်ႉ တိုဝ်းႁဝ်း တေလႆႈႁၼ်ၵႂၢမ်းပႃႇလိတင်းၼမ်၊ ယွၼ်ႉၼႆလေႈ ၵၢၼ်တႅမ်ႈ ၸွမ်းသဵင်ပႃႇလိလုၼၼ်ႉ ၽေႈၸွတ်ႇဝႆႉၼႂ်းလိၵ်ႈ  လႄႈ ၵႂၢမ်းႁဝ်းယူႇ။</string>
    <string name="title_b7"> သဵင် ၺ် (ၽႅတ်း) လႄႈ သဵင်  -ႆ (ၵႆႇၶိုၼ်း)ၼႆႉ  ဢွၵ်ႇမိူၼ်ၵၼ်၊ တူၺ်း-ၸၢႆး၊ ၸၢၺ်း၊ ပိူင်ႈၵၼ်တီႈၸႂ်ႉတိုဝ်းမၼ်းၵူၺ်း။ ၸၢႆးမူး၊
        (တႅမ်ႈမႅၼ်ႈ)၊ ၸၢၺ်းမူး(တႅမ်ႈလႆႈယူႇ၊ ၵူၼ်းၵမ်ႉၼမ် ဢမ်ႇၸႂ်ႉတိုဝ်းယဝ်ႉလေႈ ပိူင်လိၵ်ႈ မီးယူႇသေတႃႉ ဢမ်ႇသူႈဢဝ်တႅမ်ႈ)။</string>
    <string name="title_b8"> တီႈလွၵ်း ဢၼ်ၼေဝႆႉ x (ၶႂႆႇၶႃပေ)ၼႆႉ ဢမ်ႇၽႅတ်းလႆႈ၊ ဢၼ်ၽႅတ်း လႆႈဢေႇသေပိူၼ်ႈ တေပဵၼ် ၺ် လႄႈ ဝ် (ၽႅတ်း)ၼႆႉယူႇ။</string>
    <string name="title_b9"> တူဝ်ၽႅတ်းသဵင်ၶၢတ်ႇၵေႃႈ မီး 3-တူဝ်ၼင်ႇၵဝ်ႇ၊ ႁွမ်းၸွမ်းမႄႈၵပ်းငဝ်ႈ ၵေႃႈ ပဵၼ်ၵႂႃႇ 30-တူဝ်ယူႇ။ </string>
    <string name="title_b10"> လိူဝ်သေ ဢၼ်ၸႅၵ်ႇဢွၵ်ႇသဵင်လင်၊ သဵင်ၶၢတ်ႇၼႆႉ တူဝ် "ၺ၊ ဝ" တိုၵ်ႉ ၵိုတ်းဝႆႉယူႇ၊ ဢမ်ႇၽႅတ်းလႆႈၸွမ်းမႄႈၵပ်းငဝ်ႈ တင်းသိပ်းတူဝ်။</string>
    <string name="title_b11"> ꧦ---ꧦ</string>

    <string name="title_c1"> 1.Tai Learner (App ႁဵၼ်းလိၵ်ႈတႆး ၸဵဝ်းမေႃဝႆး)။</string>
    <string name="title_c2"> 2. ၶေႃႈပူင်သွၼ် ၸဝ်ႈၶူးၵေႃးသၼ်ႇလ (B.A Buddhism)၊ ၵျွင်းၽြႃးလူင်၊ တၢင်ႉယၢၼ်း။</string>
    <string name="title_c3"> 3. ပပ်ႉႁဵၼ်းလိၵ်ႈတႆး (ၸၼ်ႉငဝ်ႈ)၊ ငဝ်ႈငုၼ်းၵေႃႈလိၵ်ႈလၢႆး။</string>
    <string name="title_c4"> 4. ပပ်ႉႁဵၼ်းလိၵ်ႈတႆး ၸဵဝ်းမေႃဝႆး (ပိုၼ်ဢွၵ်ႇတႃႇပၢင်သွၼ်ၽိင်ႈငႄႈ လႄႈ ပုတ်ႉထ)၊။</string>
    <string name="title_c5"> 5. ပိုၼ်းၵႅပ်ႈလိၵ်ႈတႆး တီႈၵႅပ်ႈ (ဢၼ်လုင်းတၢင်းၵႄး ႁူပ်ႉထူပ်းမႃး)။</string>
    <string name="title_c6"> 6. ၵႂၢမ်းလၢတ်ႈ လႄႈ ၽႃႇသႃႇလိၵ်ႈလၢႆးၸၢဝ်းၶိူဝ်း (တႆး)၊ ႁူင်းႁဵၼ်းပၢႆး တၢင်းမေႃ တပ်ႉသိုၵ်း၊ ဝဵင်းပၢင်ႇဢူး၊ ပီ-1982 လိူၼ်တီႇသိမ်ႇပိူဝ်ႇ။ </string>

    <string name="title_about"> တႃႇပဵၼ် App ဢႅပ်ႉ ႁဵၼ်းလိၵ်တႆးဢၼ်ၼႆႉ၊ ၶႃႈႁဝ်းၶိူဝ်းၶမ်း လၢင်းၶိူဝ်း၊ ယိၼ်းၸူမ်းၶွပ်ႈၸႂ်ထိုင် ၸဝ်ႈၼႃႇၵိၼ်ႇတ ဝၢၼ်ႈၼႃးလဝ်း တၢင်ႉယၢၼ်း၊
        လႆႈၶတ်းၸႂ်ၵဵပ်းႁွမ်တွမ်ဢဝ် လႆၢးႁဵၼ်းလိၵ်ႈတႆး ၼႂ်းလၢႆပပ်ႉၽၢႆၽိုၼ်သေ ပိူဝ်ႈတႃႇလဵပ်ႈႁဵၼ်းလႆႈငႆၢႈၼၼ်ႉ၊ ၸင်ႇလႆႈၶူင်သၢင်ႈႁဵတ်းပဵၼ် App ႁဵၼ်းလိၵ်ႈတႆးၸဵဝ်းမေႃဝႆး မႃးၼၼ်ႉယဝ်ႉ။  </string>

    <string name="information"> ၸဝ်ႈၼႃႇၵိၼ်ႇတ တၢင်ႉယၢၼ်း</string>

    <string name="development"> ၶိူဝ်းၶမ်း လၢင်းၶိူဝ်း </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
